--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="text-center">
-                <img src="aalleenn945.github.io/cover1.png" class="rounded" alt="開始">
+                <img src="https://i.imgur.com/Xirzmcv.png" class="rounded" alt="開始">
             </div>
 
             <div class="text-center">
