--- a/part1.html
+++ b/part1.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="start.html">《通姦刑不刑》數位敘事專案</a>
+        <a class="navbar-brand" href="index.html">《通姦刑不刑》數位敘事專案</a>
 
         <div class="collapse navbar-collapse">
             <div class="navbar-nav">
@@ -101,7 +101,7 @@
                     <div class="card-body">
                         <h2 class="card-title">#</h2>
                         <div class="text-center">
-                            <img src="aalleenn945.github.io/1(Shutterstock).jpg" class="rounded" alt="性侵">
+                            <img src="https://i.imgur.com/KPChG6C.jpg" class="rounded" alt="性侵">
                         </div>
                         <div class="paragraph">
                             <p>
@@ -137,7 +137,7 @@
                         <h2 class="card-title">#</h2>
                         <h2 class="card-title">儘管校方後續辭退了該教授，但你並未提告，整件事件便不了了之。</h2>
                         <div class="text-center">
-                            <img src="aalleenn945.github.io/2(立法院網站).jpg" class="rounded" alt="立法院">
+                            <img src="https://i.imgur.com/x81xwgX.jpg" class="rounded" alt="立法院">
                             <p class="tag">立法院影像</p>
                         </div>
                         <div class="paragraph">
@@ -205,7 +205,7 @@
                         <h2 class="card-title">#</h2>
                         <h2 class="card-title">看似為了伸張正義的法律，怎麼成了加害人的幫兇...</h2>
                         <div class="text-center">
-                            <img src="aalleenn945.github.io/35師大案.png" class="rounded" alt="師大案">
+                            <img src="https://i.imgur.com/xBVHuT3.jpg" class="rounded" alt="師大案">
                             <p class="tag">師大案相關報導（中國時報(民83年4月7日)）</p>
                         </div>
                         <div class="paragraph">
@@ -265,7 +265,7 @@
                         <h2 class="card-title">#</h2>
                         <h2 class="card-title">看似為了伸張正義的法律，怎麼成了加害人的幫兇...</h2>
                         <div class="text-center">
-                            <img src="aalleenn945.github.io/35師大案.png" class="rounded" alt="師大案">
+                            <img src="https://i.imgur.com/xBVHuT3.jpg" class="rounded" alt="師大案">
                             <p class="tag">師大案相關報導（中國時報(民83年4月7日)）</p>
                         </div>
                         <div class="paragraph">
@@ -306,7 +306,7 @@
                         <h2 class="card-title">#</h2>
                         <h2 class="card-title">大法官釋憲結果認為通姦罪並不違憲</h2>
                         <div class="text-center">
-                            <img src="aalleenn945.github.io/5時任大法官會議主席之前司法院長翁岳生.jpg
+                            <img src="https://i.imgur.com/9A80mXQ.jpg
 " class="rounded" alt="大法官">
                             <p class="tag">時任大法官會議主席之前司法院院長翁岳生</p>
                         </div>
@@ -342,7 +342,7 @@
 
                 <!--家庭照片-->
                 <div class="text-center">
-                    <img src="aalleenn945.github.io/成家.jpg" class="rounded" alt="家庭照片">
+                    <img src="https://i.imgur.com/8YYFI1i.jpg" class="rounded" alt="家庭照片">
                 </div>
             </div>
 
@@ -369,7 +369,7 @@
                         <h2 class="card-title">#</h2>
                         <h2 class="card-title">某天回家你發現老公與女同事在床上一絲不掛...</h2>
                         <div class="text-center">
-                            <img src="aalleenn945.github.io/6捉姦在床.jpg" class="rounded" alt="捉姦在床">
+                            <img src="https://i.imgur.com/F3fr2a9.jpg" class="rounded" alt="捉姦在床">
                             <p class="tag">通姦示意圖</p>
                         </div>
 
@@ -430,7 +430,7 @@
                         <h2 class="card-title">#</h2>
                         <h2 class="card-title">你尋聲衝進臥室，打開手機一連拍了好多張照片...</h2>
                         <div class="text-center">
-                            <img src="aalleenn945.github.io/7王傳家.jpg" class="rounded" alt="當事人">
+                            <img src="https://i.imgur.com/JXMydZn.jpg" class="rounded" alt="當事人">
                             <p class="tag">王傳家影像</p>
                         </div>
 
@@ -491,7 +491,7 @@
                         <h2 class="card-title">#</h2>
                         <h2 class="card-title">但對於第三者，你還是決定繼續告下去…</h2>
                         <div class="text-center">
-                            <img src="aalleenn945.github.io/8賓士業務2.jpg" class="rounded" alt="賓士業務">
+                            <img src="https://i.imgur.com/NmWcEYj.jpg" class="rounded" alt="賓士業務">
                             <p class="tag">賓士業務示意圖</p>
                         </div>
 
@@ -530,7 +530,7 @@
                         <h2 class="card-title">#</h2>
                         <h2 class="card-title">就算丈夫被刑事懲罰，我還是沒有得到補償的感覺...</h2>
                         <div class="text-center">
-                            <img src="aalleenn945.github.io/9安晨妤2.jpg" class="rounded" alt="安晨妤">
+                            <img src="https://i.imgur.com/WB5f2dg.jpgg" class="rounded" alt="安晨妤">
                             <p class="tag">安晨妤影像</p>
                         </div>
 
