--- a/end.html
+++ b/end.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="start.html">《通姦刑不刑》數位敘事專案</a>
+        <a class="navbar-brand" href="index.html">《通姦刑不刑》數位敘事專案</a>
 
         <div class="collapse navbar-collapse">
             <div class="navbar-nav">
